/*
 * $Id: ChangeLog,v 1.4703 2005/12/14 10:02:31 modalsist Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2005-12-14 03:00 UTC-0800 Brian Hays <bhays at abacuslaw.com>
  * contrib/rdd_ads/ads1.c
    + added support for ADS's special ";" concatenation operator for
      .adi indexes. The index type is handled as RAW, but it
      is required for multikey indexes to be optimized.

2005-12-14 02:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.vc
    * minor change to Libs list.

2005-12-14 00:25 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  - makefile.nt
    * no longer needed - but report problems if makefile.vc causes trouble.
    * (should only be an issue - if at all - under Win98)
    * similar files in contrib dirs will be phased out eventually.
  * makefile.vc
    * Was makefile.nt - added support to work in non-batch mode if needed
    * under Win98 where the command line length may be an issue in batch mode
    * Also changed LIBLIST handling for proper MT support. (fix hbtestmt build)
  * make_vc.bat
    * use make_vc /y for 'non batch' builds. (much slower)
  * bin/build.bat
    * minor correction to MT lib list for msvc.

2005-12-13 21:17 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/rdd/dbf1.c
  * source/rdd/workarea.c
    + Added "A" Autonumeric field type functionality.

2005-12-13 22:17 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/ChangeLog
    * updated ChangeLog file

2005-12-07 13:38 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/rtl/win32ole.prg
    ! Fixed GPF trap and optimized support of VT_DATE
    - Removed no longer needed DateToDbl() and DblToDate()
    * Fixed typo in AnsiToWide()

2005-12-13 22:17 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/ChangeLog
    * updated ChangeLog file
