@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4703 2005/12/14 10:02:31 modalsist Exp $
+ * $Id: ChangeLog,v 1.4705 2005/12/14 23:07:31 ptsarenko Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,6 +8,12 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2005-12-14 23:00 UTC+0200 Pavel Tsarenko <tpe2@mail.ru>
+  * source/ct/numconv.prg
+    ! fixed clipper incompatibility for zero, negative numbers and
+      overflow in NTOC()
+  * source/codepage/cpsrwin.c
+    * corrected typos in comment
 
 2005-12-14 03:00 UTC-0800 Brian Hays <bhays at abacuslaw.com>
   * contrib/rdd_ads/ads1.c
